// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSampler snapshots should render ColorSampler 1`] = `
<DocumentFragment>
  <div
    class="css-18rrimj ColorSampler ColorSampler--light"
    data-test-box=""
    style="left: 15px; top: 15px;"
  >
    <div
      class="ColorSampler__preventAntdEventMask ColorSampler__preventAntdEventMask--light"
      data-test-button="color-sampler"
    />
    <div
      class="ColorSampler__pickerWrapper ColorSampler__pickerWrapper--light"
    >
      <div
        class="ColorSampler__picker ColorSampler__picker--light"
      >
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
        <div
          class="ColorSampler__pickerGrid ColorSampler__pickerGrid--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
      </div>
      <div
        class="ColorSampler__pickerTargetColor ColorSampler__pickerTargetColor--light"
      />
    </div>
    <div
      class="ColorSampler__data ColorSampler__data--light"
    >
      <div
        class="ColorSampler__header ColorSampler__header--light"
      >
        <div
          class="ColorSampler__selectedColor ColorSampler__selectedColor--light"
          style="background-color: rgba(0, 0, 0, 0);"
        />
      </div>
      <div
        class="ColorSampler__prompt ColorSampler__prompt--light"
      >
        <div
          class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="eyes-dropper"
          height="12"
          name="EyesDropper"
          width="12"
        />
        <small
          class="css-3thidm ColorSampler__promptDescription ColorSampler__promptDescription--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
          data-test-text=""
          style="text-align: inherit;"
        >
          Click to sample
        </small>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColorSampler snapshots should render when is pending 1`] = `
<DocumentFragment>
  <div
    class="css-18rrimj ColorSampler ColorSampler--light"
    data-test-box=""
    style="left: 15px; top: 15px;"
  >
    <div
      class="ColorSampler__preventAntdEventMask ColorSampler__preventAntdEventMask--light"
      data-test-button="color-sampler"
    />
    <div
      class="ColorSampler__pickerWrapper ColorSampler__pickerWrapper--light"
    >
      <div
        class="ColorSampler__picker ColorSampler__picker--light"
      />
      <div
        class="ColorSampler__pickerTargetColor ColorSampler__pickerTargetColor--light"
      />
      <div
        class="ColorSampler__pickerLoader ColorSampler__pickerLoader--light"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning css-dev-only-do-not-override-1odpy5d"
        >
          <span
            class="ant-spin-dot-holder"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
